# knockd-client

./: .gitignore  DEVELOPMENT.md  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
extension/: background.js  blocked.css  blocked.html  blocked.js  manifest.json  popup.css  popup.html  popup.js  storage.js
extension/native-host/: com.knockd.client.json
install/: install-linux.sh  install-windows.ps1
src/: App.tsx  api.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  crypto_store.rs  db.rs  knock.rs  knockpass.rs  launcher.rs  lib.rs  main.rs  models.rs  spa_cmds.rs
src/components/: ConnectionCard.tsx  ConnectionForm.tsx  SettingsPanel.tsx
